--- a/templates/manifest.mustache
+++ b/templates/manifest.mustache
@@ -1,8 +1,8 @@
 {
-    "name": "Android Res Export",
-    "description": "Export Android resources, like pngs, 9-patch, app icon and vector drawable.",
-    "author": "Ashung Hung",
-    "email": "Ashung.hung@gmail.com",
+    "name": "{{name}}",
+    "description": "{{description}}",
+    "author": "{{author}}",
+    "email": "{{email}}",
     "homepage": "https://github.com/Ashung/Android_Res_Export",
     "version": "2.0.0",
     "identifier": "com.ashung.hung.android_res_export",
@@ -10,90 +10,90 @@
     "bundleVersion": "1",
     "commands": [
         {
-            "name": "New PNG Asset",
+            "name": "{{new_png_asset}}",
             "identifier": "new_png_asset",
             "script": "new/new_png_asset.cocoascript"
         },
         {
-            "name": "New 9-Patch Asset",
+            "name": "{{new_nine_patch_asset}}",
             "identifier": "new_nine_patch_asset",
             "script": "new/new_nine_patch_asset.cocoascript"
         },
         {
-            "name": "New Vector Drawable Asset",
+            "name": "{{new_vector_drawable_asset}}",
             "identifier": "new_vector_drawable_asset",
             "script": "new/new_vector_drawable_asset.cocoascript"
         },
         {
-            "name": "New App Icon Asset",
+            "name": "{{new_app_icon_asset}}",
             "identifier": "new_app_icon_asset",
             "script": "new/new_app_icon_asset.cocoascript"
         },
 
         {
-            "name": "Export PNG Assets",
+            "name": "{{export_assets}}",
             "identifier": "export_assets",
             "script": "export/export_assets.cocoascript"
         },
         {
-            "name": "Export Vector Drawables",
+            "name": "{{export_vector_drawable}}",
             "identifier": "export_vector_drawable",
             "script": "export/export_vector_drawable.cocoascript"
         },
         {
-            "name": "Export 9-Patch Assets",
+            "name": "{{export_nine_patch}}",
             "identifier": "export_nine_patch",
             "script": "export/export_nine_patch.cocoascript"
         },
         {
-            "name": "Export App Icon",
+            "name": "{{export_app_icon}}",
             "identifier": "export_app_icon",
             "script": "export/export_app_icon.cocoascript"
         },
 
         {
-            "name": "Show Asset in Finder",
+            "name": "{{show_assets_in_finder}}",
             "identifier": "show_assets_in_finder",
             "handler": "showAssetsInFinder",
             "script": "utilities/utilities.cocoascript"
         },
         {
-            "name": "Open Terminal at Asset Folder",
+            "name": "{{open_terminal_at_assets_folder}}",
             "identifier": "open_terminal_at_assets_folder",
             "handler": "openTerminalAtResFolder",
             "script": "utilities/utilities.cocoascript"
         },
         {
-            "name": "Web Site",
+            "name": "{{web_site}}",
             "identifier": "web_site",
             "handler": "website",
             "script": "Utilities/utilities.cocoascript"
         },
         {
-            "name": "Report Issues",
+            "name": "{{report_issues}}",
             "identifier": "report_issues",
             "handler": "reportIssues",
             "script": "utilities/utilities.cocoascript"
         },
         {
-            "name": "Change Language",
+            "name": "{{change_language}}",
             "identifier": "change_language",
             "script": "utilities/change_language.cocoascript"
         },
         {
-            "name": "Donate via PayPal",
+            "name": "{{donate_via_paypal}}",
             "identifier": "donate_via_paypal",
             "handler": "donateViaPaypal",
             "script": "Utilities/utilities.cocoascript"
         },
         {
-            "name": "Donate via WeChat",
+            "name": "{{donate_via_wechat}}",
             "identifier": "donate_via_wechat",
             "handler": "donateViaWechat",
             "script": "Utilities/utilities.cocoascript"
         },
         {
-            "name": "Donate via Alipay",
+            "name": "{{donate_via_alipay}}",
             "identifier": "donate_via_alipay",
             "handler": "donateViaAlipay",
             "script": "Utilities/utilities.cocoascript"
@@ -117,7 +117,7 @@
             "open_terminal_at_assets_folder",
             "-",
             {
-                "title": "Help",
+                "title": "{{help}}",
                 "items": [
                     "web_site",
                     "report_issues",
