--- a/templates/manifest.mustache
+++ b/templates/manifest.mustache
@@ -1,9 +1,11 @@
 {
-    "name": "{{name}}",
+    "name": "Android Res Export",
     "description": "{{description}}",
-    "author": "{{author}}",
-    "email": "{{email}}",
+    "author": "Ashung Hung",
+    "email": "Ashung.hung@gmail.com",
     "homepage": "https://github.com/Ashung/Android_Res_Export",
+    "manifestURL": "https://github.com/Ashung/Android_Res_Export/raw/master/Android_Res_Export.sketchplugin/Contents/Sketch/manifest.json",
+    "downloadURL": "https://github.com/Ashung/Android_Res_Export/archive/master.zip",
     "version": "2.0.0",
     "identifier": "com.ashung.hung.android_res_export",
     "compatibleVersion": "3",
@@ -81,22 +83,27 @@
             "script": "utilities/change_language.cocoascript"
         },
         {
+            "name": "{{update}}",
+            "identifier": "update",
+            "script": "utilities/update.cocoascript"
+        },
+        {
             "name": "{{donate_via_paypal}}",
             "identifier": "donate_via_paypal",
             "handler": "donateViaPaypal",
-            "script": "Utilities/utilities.cocoascript"
+            "script": "utilities/utilities.cocoascript"
         },
         {
             "name": "{{donate_via_wechat}}",
             "identifier": "donate_via_wechat",
             "handler": "donateViaWechat",
-            "script": "Utilities/utilities.cocoascript"
+            "script": "utilities/utilities.cocoascript"
         },
         {
             "name": "{{donate_via_alipay}}",
             "identifier": "donate_via_alipay",
             "handler": "donateViaAlipay",
-            "script": "Utilities/utilities.cocoascript"
+            "script": "utilities/utilities.cocoascript"
         }
     ],
     "menu": {
@@ -118,6 +125,8 @@
                 "items": [
                     "web_site",
                     "report_issues",
+                    "-",
+                    "update",
                     "-",
                     "change_language",
                     "-",
