(WIP) Code refactoring

--- a/templates/manifest.mustache
+++ b/templates/manifest.mustache
@@ -52,18 +52,10 @@
             "identifier": "export_app_icon",
             "script": "export/export_app_icon.cocoascript"
         },
-
         {
-            "name": "{{show_assets_in_finder}}",
-            "identifier": "show_assets_in_finder",
-            "handler": "showAssetsInFinder",
-            "script": "utilities/utilities.cocoascript"
-        },
-        {
-            "name": "{{open_terminal_at_assets_folder}}",
-            "identifier": "open_terminal_at_assets_folder",
-            "handler": "openTerminalAtResFolder",
-            "script": "utilities/utilities.cocoascript"
+            "name": "{{asset_name_validator}}",
+            "identifier": "asset_name_validator",
+            "script": "export/asset_name_validator.cocoascript"
         },
         {
             "name": "{{web_site}}",
@@ -119,6 +111,8 @@
             "export_nine_patch",
             "export_vector_drawable",
             "export_app_icon",
+            "-",
+            "asset_name_validator",
             "-",
             {
                 "title": "{{help}}",
