WIP, Android O icon template

--- a/templates/manifest.mustache
+++ b/templates/manifest.mustache
@@ -40,6 +40,11 @@
             "script": "new/new_app_icon.cocoascript"
         },
         {
+            "name": "{{new_app_icon_android_o}}",
+            "identifier": "new_app_icon_android_o",
+            "script": "new/new_app_icon_android_o.cocoascript"
+        },
+        {
             "name": "{{export_png_assets}}",
             "identifier": "export_png_assets",
             "script": "export/export_png_assets.cocoascript"
@@ -121,6 +126,7 @@
             "new_nine_patch_asset",
             "new_vector_drawable_asset",
             "new_app_icon",
+            "new_app_icon_android_o",
             "-",
             "export_png_assets",
             "export_nine_patch",
