WIP, color name, windows.

--- a/templates/manifest.mustache
+++ b/templates/manifest.mustache
@@ -72,6 +72,11 @@
             "script": "export/export_shape_xml.cocoascript"
         },
         {
+            "name": "{{view_code}}",
+            "identifier": "view_code",
+            "script": "code/window.cocoascript"
+        },
+        {
             "name": "{{add_system_icon}}",
             "identifier": "add_system_icon",
             "script": "utilities/add_system_icon.cocoascript"
@@ -139,6 +144,8 @@
             "export_vector_drawable",
             "export_app_icon",
             "export_shape_xml",
+            "-",
+            "view_code",
             "-",
             {
                 "title": "{{utilities}}",
