--- a/templates/manifest.mustache
+++ b/templates/manifest.mustache
@@ -77,6 +77,16 @@
             "script": "code/window.cocoascript"
         },
         {
+            "name": "{{nine_patch_preview}}",
+            "identifier": "nine_patch_preview",
+            "script": "code/nine_patch_preview.cocoascript"
+        },
+        {
+            "name": "{{view_code}}",
+            "identifier": "view_code",
+            "script": "code/view_code.cocoascript"
+        },
+        {
             "name": "{{add_system_icon}}",
             "identifier": "add_system_icon",
             "script": "utilities/add_system_icon.cocoascript"
@@ -144,6 +154,9 @@
             "export_vector_drawable",
             "export_app_icon",
             "export_shape_xml",
+            "-",
+            "nine_patch_preview",
+            "view_code",
             "-",
             {
                 "title": "{{utilities}}",
