--- a/templates/manifest.mustache
+++ b/templates/manifest.mustache
@@ -74,7 +74,7 @@
         {
             "name": "{{view_code}}",
             "identifier": "view_code",
-            "script": "code/window.cocoascript"
+            "script": "code/view_code.cocoascript"
         },
         {
             "name": "{{nine_patch_preview}}",
