--- a/templates/manifest.mustache
+++ b/templates/manifest.mustache
@@ -72,19 +72,14 @@
             "script": "export/export_shape_xml.cocoascript"
         },
         {
-            "name": "{{view_code}}",
-            "identifier": "view_code",
-            "script": "code/view_code.cocoascript"
-        },
-        {
             "name": "{{nine_patch_preview}}",
             "identifier": "nine_patch_preview",
             "script": "code/nine_patch_preview.cocoascript"
         },
         {
-            "name": "{{view_code}}",
-            "identifier": "view_code",
-            "script": "code/view_code.cocoascript"
+            "name": "{{code_preview}}",
+            "identifier": "code_preview",
+            "script": "code/code_preview.cocoascript"
         },
         {
             "name": "{{add_system_icon}}",
@@ -156,7 +151,7 @@
             "export_shape_xml",
             "-",
             "nine_patch_preview",
-            "view_code",
+            "code_preview",
             "-",
             {
                 "title": "{{utilities}}",
