Nine-Patch Preview

--- a/templates/manifest.mustache
+++ b/templates/manifest.mustache
@@ -5,11 +5,10 @@
     "email": "Ashung.hung@gmail.com",
     "homepage": "https://github.com/Ashung/Android_Res_Export",
     "appcast": "https://ashung.github.io/Android_Res_Export/appcast.xml",
-    "version": "2.3.1",
+    "version": "2.3.2",
     "identifier": "com.ashung.hung.android_res_export",
     "compatibleVersion": "3",
     "bundleVersion": "1",
-    "language": "en",
     "commands": [
         {
             "handlers": {
@@ -74,12 +73,12 @@
         {
             "name": "{{nine_patch_preview}}",
             "identifier": "nine_patch_preview",
-            "script": "code/nine_patch_preview.cocoascript"
+            "script": "preview/nine_patch_preview.cocoascript"
         },
         {
             "name": "{{code_preview}}",
             "identifier": "code_preview",
-            "script": "code/code_preview.cocoascript"
+            "script": "preview/code_preview.cocoascript"
         },
         {
             "name": "{{add_system_icon}}",
@@ -151,7 +150,6 @@
             "export_shape_xml",
             "-",
             "nine_patch_preview",
-            "code_preview",
             "-",
             {
                 "title": "{{utilities}}",
