Add color code from document colors.

--- a/templates/manifest.mustache
+++ b/templates/manifest.mustache
@@ -5,7 +5,7 @@
     "email": "Ashung.hung@gmail.com",
     "homepage": "https://github.com/Ashung/Android_Res_Export",
     "appcast": "https://ashung.github.io/Android_Res_Export/appcast.xml",
-    "version": "2.3.2",
+    "version": "2.3.3",
     "identifier": "com.ashung.hung.android_res_export",
     "compatibleVersion": "3",
     "bundleVersion": "1",
@@ -79,13 +79,13 @@
             "name": "{{color_resource_code_from_selected_layer}}",
             "identifier": "color_resource_code_from_selected_layer",
             "handler": "colorResourceCodeFromSelectedLayer",
-            "script": "preview/code_preview.cocoascript"
+            "script": "preview/color_code_preview.cocoascript"
         },
         {
             "name": "{{color_resource_code_from_document_color}}",
             "identifier": "color_resource_code_from_document_color",
             "handler": "colorResourceCodeFromDocumentColor",
-            "script": "preview/code_preview.cocoascript"
+            "script": "preview/color_code_preview.cocoascript"
         },
         {
             "name": "{{add_system_icon}}",
@@ -158,7 +158,6 @@
             "-",
             "nine_patch_preview",
             "color_resource_code_from_document_color",
-            "color_resource_code_from_selected_layer",
             "-",
             {
                 "title": "{{utilities}}",
