Fix large nine-patch asset preview.

--- a/Android_Res_Export.sketchplugin/Contents/Resources/style.css
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/style.css
@@ -149,7 +149,7 @@ input[type=range]:focus {
     transition: background .2s;
 }
 #background_toggle {
-    position: absolute;
+    position: fixed;
     top: 16px;
     right: 16px;
     z-index: 100;
