--- a/templates/manifest.mustache
+++ b/templates/manifest.mustache
@@ -68,6 +68,7 @@
         {
             "name": "{{export_shape_xml}}",
             "identifier": "export_shape_xml",
+            "handler": "exportShapeXML",
             "script": "export/export_shape_xml.cocoascript"
         },
         {
@@ -86,6 +87,12 @@
             "identifier": "color_resource_code_from_document_color",
             "handler": "colorResourceCodeFromDocumentColor",
             "script": "preview/color_code_preview.cocoascript"
+        },
+        {
+            "name": "{{view_shape_xml_code}}",
+            "identifier": "view_shape_xml_code",
+            "handler": "viewShapeXMLCode",
+            "script": "export/export_shape_xml.cocoascript"
         },
         {
             "name": "{{add_system_icon}}",
@@ -158,6 +165,7 @@
             "-",
             "nine_patch_preview",
             "color_resource_code_from_document_color",
+            "view_shape_xml_code",
             "-",
             {
                 "title": "{{utilities}}",
