--- a/Android_Res_Export.sketchplugin/Contents/Resources/style.css
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/style.css
@@ -128,10 +128,9 @@ input[type=range]:focus {
     background: #fff;
 }
 #foot-actions {
-    height: 52px;
     text-align: right;
-    padding: 8px 16px;
-    align-items: center;/* 8px 16px*/
+    padding: 8px;
+    align-items: center;
     display: flex;
     border-top: 1px solid #ddd;
 }
