--- a/templates/manifest.mustache
+++ b/templates/manifest.mustache
@@ -23,6 +23,22 @@
             "handler": "newVectorAsset",
             "script": "new/new_asset.cocoascript"
         },
+        {
+            "name": "{{new_nine_patch_asset}}",
+            "identifier": "new_nine_patch_asset",
+            "script": "new/new_nine_patch_asset.cocoascript"
+        },
+        {
+            "name": "{{new_app_icon}}",
+            "identifier": "new_app_icon",
+            "script": "new/new_app_icon.cocoascript"
+        },
+
+
+
+
+
+
 
         {
             "handlers": {
@@ -33,24 +49,26 @@
             "script": "utilities/change_language.cocoascript"
         },
 
-        {
-            "name": "{{new_nine_patch_asset}}",
-            "identifier": "new_nine_patch_asset",
-            "script": "new/new_nine_patch_asset.cocoascript"
-        },
 
         {
-            "name": "{{new_app_icon_legacy}}",
-            "identifier": "new_app_icon_legacy",
-            "handler": "newAppIconTemplateLegacy",
-            "script": "new/new_app_icon.cocoascript"
+            "name": "{{nine_patch_preview}}",
+            "identifier": "nine_patch_preview",
+            "script": "preview/nine_patch_preview.cocoascript"
         },
         {
-            "name": "{{new_app_icon}}",
-            "identifier": "new_app_icon",
-            "handler": "newAppIconTemplate",
-            "script": "new/new_app_icon.cocoascript"
+            "name": "{{color_resource_code_from_selected_layer}}",
+            "identifier": "color_resource_code_from_selected_layer",
+            "handler": "viewColorCodeFromLayers",
+            "script": "preview/code_preview.cocoascript"
         },
+        {
+            "name": "{{view_shape_xml_code}}",
+            "identifier": "view_shape_xml_code",
+            "handler": "viewShapeXMLCode",
+            "script": "export/code_preview.cocoascript"
+        },
+
+
         {
             "name": "{{export_png_assets}}",
             "identifier": "export_png_assets",
@@ -71,29 +89,10 @@
             "identifier": "export_app_icon",
             "script": "export/export_app_icon.cocoascript"
         },
-        {
-            "name": "{{export_shape_xml}}",
-            "identifier": "export_shape_xml",
-            "handler": "exportShapeXML",
-            "script": "export/export_shape_xml.cocoascript"
-        },
-        {
-            "name": "{{nine_patch_preview}}",
-            "identifier": "nine_patch_preview",
-            "script": "preview/nine_patch_preview.cocoascript"
-        },
-        {
-            "name": "{{color_resource_code_from_selected_layer}}",
-            "identifier": "color_resource_code_from_selected_layer",
-            "handler": "colorResourceCodeFromLayers",
-            "script": "preview/color_code_preview.cocoascript"
-        },
-        {
-            "name": "{{view_shape_xml_code}}",
-            "identifier": "view_shape_xml_code",
-            "handler": "viewShapeXMLCode",
-            "script": "export/export_shape_xml.cocoascript"
-        },
+
+
+
+
         {
             "name": "{{preferences}}",
             "identifier": "preferences",
