wip. nine-patch

--- a/templates/manifest.mustache
+++ b/templates/manifest.mustache
@@ -33,7 +33,6 @@
             "identifier": "new_app_icon",
             "script": "new/new_app_icon.cocoascript"
         },
-
         {
             "name": "{{nine_patch_preview}}",
             "identifier": "nine_patch_preview",
@@ -49,29 +48,14 @@
             "identifier": "view_shape_code",
             "script": "preview/view_shape_code.cocoascript"
         },
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         {
             "name": "{{export_png_assets}}",
             "identifier": "export_png_assets",
             "script": "export/export_png_assets.cocoascript"
         },
         {
-            "name": "{{export_vector_drawable}}",
-            "identifier": "export_vector_drawable",
+            "name": "{{export_vector_assets}}",
+            "identifier": "export_vector_assets",
             "script": "export/export_vector_drawable.cocoascript"
         },
         {
@@ -84,10 +68,6 @@
             "identifier": "export_app_icon",
             "script": "export/export_app_icon.cocoascript"
         },
-
-
-
-
         {
             "name": "{{preferences}}",
             "identifier": "preferences",
@@ -130,8 +110,8 @@
             "new_app_icon",
             "-",
             "export_png_assets",
+            "export_vector_assets",
             "export_nine_patch",
-            "export_vector_drawable",
             "export_app_icon",
             "-",
             "nine_patch_preview",
