--- a/templates/manifest.mustache
+++ b/templates/manifest.mustache
@@ -6,7 +6,7 @@
     "homepage": "https://github.com/Ashung/Android_Res_Export",
     "appcast": "https://ashung.github.io/Android_Res_Export/appcast.xml",
     "icon": "plugin_icon.png",
-    "version": "3.0.0",
+    "version": "3.1.0",
     "identifier": "com.ashung.hung.android_res_export",
     "compatibleVersion": "4",
     "bundleVersion": "1",
@@ -94,7 +94,8 @@
         {
             "handlers": {
                 "actions": {
-                    "OpenDocument": "onOpenDocument"
+                    "Startup": "changeLanguage",
+                    "OpenDocument": "changeLanguage"
                 }
             },
             "script": "utilities/change_language.cocoascript"
